@@ -1,3 +1,12 @@
+2001-06-27  Alan Modra  <amodra@bigpond.net.au>
+
+	* emulparams/hppa64linux.sh: New file.
+	* configure.tgt: hppa*64*-*-linux* uses hppa64linux.sh
+	* Makefile.am (ALL_64_EMULATIONS): Add ehppa64linux.o
+	(ehppa64linux.c): Add rule to make it.
+	Run "make dep-am".
+	* Makefile.in: Regenerate.
+
 2001-06-07  Andreas Jaeger  <aj@suse.de>
 
 	* elf_x86_64.sh (NONPAGED_TEXT_START_ADDR): Increase.
